examples/simple/undefined/UB-EIO3-bad.output
Error: UB-EIO3
Description: Trying to modify an object declared with const type.
Type: Undefined behavior.
See also: C11 sec. 6.7.3:6, J.2:1 item 64
  at main(UB-EIO3-bad.c:6)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
